add functions and update interface

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebSocket Chat</title>
+    <link rel="icon" href="./view/img/chat.png" type="image/x-icon">
+    <title>RealTime Chat</title>
     <link rel="stylesheet" href="./asset/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,7 +42,7 @@
                     <div class="user active">
                         <div class="dot"></div>
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -55,7 +56,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -69,7 +70,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -83,7 +84,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -97,7 +98,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -111,7 +112,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -125,7 +126,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -139,7 +140,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -153,7 +154,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -167,7 +168,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -181,7 +182,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -195,7 +196,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -209,7 +210,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -223,7 +224,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -237,7 +238,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -251,7 +252,7 @@
                     </div>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -272,7 +273,7 @@
                     <i id="back" class="fa-solid fa-chevron-left"></i>
                     <div class="user">
                         <div class="user-img">
-                            <!-- <i class="fa-solid fa-user"></i> -->
+                            <img src="./view/img/user.png" alt="user">
                         </div>
                         <div class="user-info">
                             <div class="user-name">Lưu Sỹ Trường</div>
@@ -283,18 +284,45 @@
                     </div>
                 </div>
                 <div class="body-chat">
-                    <!-- <img src="./view/img/chat.png" alt="" height="300"> -->
                     <div class="msg-list">
                         <div class="msg sent">
                             <div class="msg-content">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
+                                1Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
                                 voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
                                 totam nulla hic dolorum quis id, error omnis.
                             </div>
                         </div>
                         <div class="msg received">
                             <div class="msg-content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
+                                2Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
+                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
+                                doloribus in reiciendis? Voluptate.
+                            </div>
+                        </div>
+                        <div class="msg sent">
+                            <div class="msg-content">
+                                3Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
+                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
+                                totam nulla hic dolorum quis id, error omnis.
+                            </div>
+                        </div>
+                        <div class="msg received">
+                            <div class="msg-content">
+                                4Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
+                                alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
+                                doloribus in reiciendis? Voluptate.
+                            </div>
+                        </div>
+                        <div class="msg sent">
+                            <div class="msg-content">
+                                5Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nostrum
+                                voluptatibus natus quaerat illo asperiores odit voluptatum nisi earum tenetur vero ea
+                                totam nulla hic dolorum quis id, error omnis.
+                            </div>
+                        </div>
+                        <div class="msg received">
+                            <div class="msg-content">
+                                6Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere quos odio eos
                                 alias rerum doloremque, iusto dolor quam harum, excepturi ipsam quo iste libero id
                                 doloribus in reiciendis? Voluptate.
                             </div>
@@ -310,7 +338,7 @@
                         </div>
                     </div>
                     <div class="wrapper">
-                        <textarea name="input" id="input-area" placeholder="Aa"></textarea>
+                        <textarea name="input" id="input" placeholder="Aa" rows="1"></textarea>
                     </div>
                     <div id="send-msg">
                         <ion-icon name="send"></ion-icon>
@@ -320,50 +348,108 @@
         </div>
         <div class="sidebar">
             <div class="wrapper">
-                <i id="hide-sidebar" class="fa-solid fa-xmark"></i>
-                <div class="user-profile">
-                    <div class="user-img">
-                        <img src="./view/img/user.png" alt="user">
+                <div class="wrapper-scroll">
+                    <i id="hide-sidebar" class="fa-solid fa-xmark"></i>
+                    <div class="user-profile">
+                        <div class="user-img">
+                            <img src="./view/img/user.png" alt="user">
+                        </div>
+                        <div class="user-fullname">
+                            Lưu Sỹ Trường
+                        </div>
                     </div>
-                    <div class="user-fullname">
-                        Lưu Sỹ Trường
+                    <div class="date-join">
+                        <div class="icon">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="content">
+                            <div class="title">
+                                RealTime Chat
+                            </div>
+                            <div class="date-info">
+                                Tham gia ngày 27 thg 6, 2004
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="nav-link">
-                    <div class="nav-scroll">
-                        <div class="my-profile">
+                    <div class="general">
+                        <div class="title">
                             <i class="fa-solid fa-user"></i>
-                            Tài khoản của tôi
-                            <i class="fa-solid fa-chevron-right"></i>
+                            Tổng quát
                         </div>
-                        <div class="create-group">
-                            <i class="fa-solid fa-user-group"></i>
-                            Tạo nhóm chat mới
-                            <i class="fa-solid fa-chevron-right"></i>
+                        <div class="wrapper">
+                            <div id="change-avt" class="styles">
+                                <i class="fa-solid fa-circle-user"></i>
+                                Sửa ảnh hồ sơ
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
+                            <div id="change-fullname" class="styles">
+                                <i class="fa-solid fa-tag"></i>
+                                Sửa tên hồ sơ
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
+                            <div id="change-email" class="styles">
+                                <i class="fa-solid fa-envelope"></i>
+                                Thay đổi địa chỉ email
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
+                            <div id="change-pw" class="styles">
+                                <i class="fa-solid fa-key"></i>
+                                Thay đổi mật khẩu
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="night-mode">
-                            <i class="fa-solid fa-moon"></i>
-                            Chế độ ban đêm
-                            <i class="fa-solid fa-chevron-right"></i>
+                    </div>
+                    <div class="danger-zone">
+                        <div class="title">
+                            <i class="fa-solid fa-circle-exclamation"></i>
+                            Vùng nguy hiểm
                         </div>
-                        <gap></gap>
-                        <div class="log-out">
-                            <i class="fa-solid fa-right-from-bracket"></i>
-                            Đăng xuất
-                            <i class="fa-solid fa-chevron-right"></i>
+                        <div class="wrapper">
+                            <div id="delete-account" class="styles">
+                                <i class="fa-solid fa-trash"></i>
+                                Xoá tài khoản
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
+                            <div id="log-out" class="styles">
+                                <i class="fa-solid fa-hand"></i>
+                                Đăng xuất<div class="link-icon"></div>
+                                <div class="link-icon">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                    <div class="dev-by">
+                        Developed by
+                        <a class="auther" href="https://fb.com/lst24">
+                            Truong Dev
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="shadow"></div>
     </div>
+    </div>
 
     <!-- <script type="module" src="asset/js/connection.js"></script>
     <script type="module" src="asset/js/messageSent.js"></script> -->
-    <script src="asset/js/moreOptionChat.js"></script>
-    <script src="asset/js/userAction.js"></script>
-    <script src="asset/js/sideBar.js"></script>
+    <script type="module" src="asset/js/autoHeightInput.js"></script>
+    <script type="module" src="asset/js/moreOptionChat.js"></script>
+    <script type="module" src="asset/js/userAction.js"></script>
+    <script type="module" src="asset/js/sideBar.js"></script>
+    <script type="module" src="asset/js/windowResize.js"></script>
+    <script type="module" src="asset/js/navLink.js"></script>
 </body>
 
 </html>
