--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtime Chat - Login</title>
+    <link rel="icon" href="./view/img/chat.png" type="image/x-icon">
+    <title>RealTime Chat - Đăng nhập tài khoản</title>
     <link rel="stylesheet" href="./asset/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
                 <img src="./view/img/chat.png" alt="realtime chat logo">
                 <div class="box-input">
                     <label for="email">
-                        Email Address
+                        Địa chỉ email
                     </label>
                     <div>
                         <i class="fa-solid fa-envelope"></i>
@@ -34,7 +35,7 @@
                 </div>
                 <div class="box-input">
                     <label for="password">
-                        Password
+                        Mật khẩu
                     </label>
                     <div>
                         <i class="fa-solid fa-lock"></i>
@@ -43,11 +44,11 @@
                     </div>
                 </div>
                 <button tabindex="4" type="submit">
-                    Login
+                    Đăng nhập
                 </button>
                 <div class="option">
-                    <a tabindex="5" href="./register.html">Sign up</a>
-                    <a tabindex="6" href="">Forgot Password?</a>
+                    <a tabindex="5" href="./register.html">Đăng ký</a>
+                    <a tabindex="6" href="">Quên mật khẩu?</a>
                 </div>
             </form>
         </div>
