--- a/register.html
+++ b/register.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtime Chat - Login</title>
+    <link rel="icon" href="./view/img/chat.png" type="image/x-icon">
+    <title>RealTime Chat - Đăng ký tài khoản</title>
     <link rel="stylesheet" href="./asset/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,16 +23,16 @@
                 <img src="./view/img/chat.png" alt="realtime chat logo">
                 <div class="box-input">
                     <label for="fullname">
-                        Full Name
+                        Họ và tên
                     </label>
                     <div>
                         <i class="fa-solid fa-user"></i>
-                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="Nguyen Van A" required>
+                        <input tabindex="1" id="fullname" name="fullname" type="text" placeholder="nguyen van a" required>
                     </div>
                 </div>
                 <div class="box-input">
                     <label for="email">
-                        Email Address
+                        Địa chỉ email
                     </label>
                     <div>
                         <i class="fa-solid fa-envelope"></i>
@@ -40,11 +41,11 @@
                 </div>
                 <div class="box-input">
                     <label for="password">
-                        Password
+                        Mật khẩu
                     </label>
                     <div>
                         <i class="fa-solid fa-lock"></i>
-                        <input tabindex="3" id="password" name="password" type="password" placeholder="Password" required>
+                        <input tabindex="3" id="password" name="password" type="password" placeholder="mật khẩu" required>
                         <i class="fa-solid fa-eye" tabindex="4"></i>
                         <!-- <button id="action-password" type="button" name="button">
                         </button> -->
@@ -52,15 +53,15 @@
                     <div>
                         <i class="fa-solid fa-lock"></i>
                         <input tabindex="5" id="repeat-password" name="repeat-password" type="password"
-                            placeholder="Reapet Password" required>
+                            placeholder="nhập lại mật khẩu" required>
                         <!-- <i class="fa-solid fa-eye"></i> -->
                     </div>
                 </div>
                 <button tabindex="6" type="submit">
-                    Register
+                    Đăng ký
                 </button>
                 <div class="option">
-                    <a tabindex="7" href="./login.html">Sign in</a>
+                    <a tabindex="7" href="./login.html">Đăng nhập</a>
                 </div>
             </form>
         </div>
