--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./view/img/chat.png" type="image/x-icon">
-    <title>RealTime Chat</title>
+    <title>ChitChat</title>
     <link rel="stylesheet" href="./asset/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -364,7 +364,7 @@
                         </div>
                         <div class="content">
                             <div class="title">
-                                RealTime Chat
+                                Thành viên ChitChat
                             </div>
                             <div class="date-info">
                                 Tham gia ngày 27 thg 6, 2004
@@ -405,6 +405,16 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </div>
                             </div>
+                            <label id="night-mode" class="styles">
+                                <i class="fa-solid fa-moon"></i>
+                                Chế độ ban đêm
+                                <div class="link-icon">
+                                    <div class="switch">
+                                        <input type="checkbox" id="night-checkbox">
+                                        <span class="slider round"></span>
+                                      </div>
+                                </div>
+                            </label>
                         </div>
                     </div>
                     <div class="danger-zone">
@@ -440,7 +450,6 @@
         </div>
         <div class="shadow"></div>
     </div>
-    </div>
 
     <!-- <script type="module" src="asset/js/connection.js"></script>
     <script type="module" src="asset/js/messageSent.js"></script> -->
@@ -450,6 +459,7 @@
     <script type="module" src="asset/js/sideBar.js"></script>
     <script type="module" src="asset/js/windowResize.js"></script>
     <script type="module" src="asset/js/navLink.js"></script>
+    <script type="module" src="asset/js/nightMode.js"></script>
 </body>
 
 </html>
