--- a/login.html
+++ b/login.html
@@ -30,10 +30,9 @@
                     <div>
                         <i class="fa-solid fa-envelope"></i>
                         <input tabindex="1" id="email" name="email" type="text" placeholder="example" required>
-                        <p>@gmail.com</p>
                     </div>
                 </div>
-                <div class="box-input">
+                <div id="box-pw-login" class="box-input">
                     <label for="password">
                         Mật khẩu
                     </label>
